<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_light" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="80dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/color_dark_gray"
        android:gravity="center"
        android:drawableLeft="@drawable/ic_launcher_big"
        android:drawablePadding="20dp"
        />
    
    <Button
        android:id="@+id/btn_newwords_view"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_light"
        android:text="@string/btn_newwords_view"
        android:textSize="20sp"
        android:textColor="@color/color_dark_gray"
        />
    
    <Button
        android:id="@+id/btn_newwords_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_light"
        android:text="@string/btn_newwords_input"
        android:textSize="20sp"
        android:textColor="@color/color_dark_gray"
        />
    
    <Button
        android:id="@+id/btn_newwords_test"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_light"
        android:text="@string/btn_newwords_test"
        android:textSize="20sp"
        android:textColor="@color/color_dark_gray"
        />

</LinearLayout>
